added code HW#8 v.1

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Goit-react-hw-07-phonebook</title>
+  <title>Goit-react-hw-08-phonebook</title>
 
   <script type="text/javascript">
     (function (l) {
@@ -36,7 +36,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="display: flex; flex-direction: column; height: 100vh;"></div>
 
 </body>
 
