--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style="display: flex; flex-direction: column; height: 100vh;"></div>
-
+  <div id="root"></div>
+  <div id="modal-root"></div>
 </body>
 
 </html>
