--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Goit-react-hw-08-phonebook</title>
+  <title>Phonebook</title>
 
   <script type="text/javascript">
     (function (l) {
